# lunar

./: .gitignore  Cargo.toml  README.md  callgrind.sh  flake.nix  makefile  parameters.yaml  pesto.c  rust-toolchain  selfplay.py  shell.nix  simplified_abdada.c
.cargo/: config.toml
.github/workflows/: datagen.yml  mutants.yml  ob.yml  rust.yml  selfplay.yml
benches/: perft_bench.rs
examples/: tuner.rs
nets/: screlu1024_hm.nnue  screlu128.nnue  screlu192.nnue  screlu256.nnue  screlu512.nnue  screlu512_hm.nnue  screlu512_hm_8ob.nnue  screlu768_hm.nnue  simple128.nnue  simple32.nnue  simple64.nnue
parameters/: Cargo.toml
parameters/src/: lib.rs
scripts/: book_randomize.py  build_pgo.sh  c-chess-cli.py  c_chess_cli.py  callgrind.sh  collect-selfplay.sh  collect_test_data.sh  datagen.sh  datagen_batch.sh  elo_anotated_log.py  grab_pgns.sh  log_relevant.sh  play_with_coach.py  plot.py  relevant_commits.sh  selfplay.py  stats.py  stockfish_rescore.py  total_elos.sh  train_cycle.sh  train_lmr.py
src/: basic_enums.rs  bitboard.rs  bitboard_map.rs  board.rs  build.rs  byteboard.rs  castlerights.rs  direction.rs  game.rs  generated.rs  history.rs  hugepages_mmap_alloc.rs  legality.rs  lib.rs  main.rs  millipawns.rs  piece.rs  ply.rs  plyset.rs  poison_drop.rs  polyglot.rs  simd_zobrist.rs  small_finite_enum.rs  square.rs  transposition_table.rs  uci.rs  values.rs  zero_init.rs  zobrist_hash.rs
src/eval/: evaluator.rs  mod.rs  parameters.rs  pawn_hash_table.rs  pesto.rs
src/search/: bench.rs  countermove.rs  currently_searching.rs  history_heuristic.rs  mod.rs  move_order.rs  parameters.rs  search_pool.rs  search_thread.rs  stats.rs
src/search/search_thread/: move_order.rs
src/search/search_thread/lmr/: gen.rs  mod.rs
src/zobrist_hash/: constants.rs
test_data/: blitz_openings.fen
trainer/: Cargo.toml  cuda-fhs.nix
trainer/src/: main.rs
