[package]
name = "lunar"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"
default-run = "lunar"
authors = ["Patrick Hilhorst"]

[workspace]
members = ["parameters"]

[features]
default = ["asm", "readline", "intrinsics"]
# Enables custom assembly. Can be disabled on platforms that support it
# to test "generic" code. All ASM _should_ be feature-gated.
asm = []
# Explicitly uses std::simd. Currently experimental, so disabled by default
simd = []
readline = ["rustyline"]
hugepages = ["nix"]
# Enable core_intrinsics and some implementations that that enables.
intrinsics = []

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
debug = 1

# Make the build script run faster.
[profile.dev]
opt-level = 3

[dependencies]
coz = "0.1"
strum = "0.25"
strum_macros = "0.25"
crossbeam-channel = "0.5"
smallvec = { version = "1.11", features = ["union"] }
static_assertions = "1.1"
parameters = { path = "./parameters" }
rustyline = { version = "13.0", optional = true }
nix = { version = "0.27", optional = true, features = [
  "mman",
], default-features = false }
not_empty = "0.1"
lru = { version = "0.12", default-features = false }
linear-map = "1.2"

[build-dependencies]
rand = { version = "0.8", features = ["small_rng"], default-features = false }
parameters = { path = "./parameters" }
serde = { version = "1.0" }
serde_yaml = "0.9"

[dev-dependencies]
csv = "1.1"
# criterion = { version = "0.4", features = ["html_reports"] }
rand = { version = "0.8", features = [
  "small_rng",
  "alloc",
], default-features = false }
serde_yaml = "0.9"

[[bench]]
name = "perft_bench"
harness = false
