[package]
name = "lunar"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"
default-run = "lunar"
authors = ["Patrick Hilhorst"]

[workspace]
members = ["parameters"]

[features]
default = ["asm", "readline", "intrinsics"]
# Enables custom assembly. Can be disabled on platforms that support it
# to test "generic" code. All ASM _should_ be feature-gated.
asm = []
# Explicitly uses std::simd. Currently experimental, so disabled by default
simd = []
readline = ["rustyline"]
hugepages = ["nix"]
# Enable core_intrinsics and some implementations that that enables.
intrinsics = []

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
debug = true

# Make the build script run faster.
[profile.dev]
opt-level = 3

[dependencies]
crossbeam-channel = "0.5"
smallvec = { version = "1.15", features = ["union"] }
static_assertions = "1.1"
parameters = { path = "./parameters" }
rustyline = { version = "15.0", optional = true, default-features = false }
nix = { version = "0.29", optional = true, features = [
  "mman",
], default-features = false }
not_empty = "0.1"
lru = { version = "0.14", default-features = false }
linear-map = "1.2"
quickcheck = { version = "1.0.3", default-features = false }
fixed = { version = "1.28.0", default-features = false }

[build-dependencies]
rand = { version = "0.8", features = ["small_rng"], default-features = false }
parameters = { path = "./parameters" }
serde = { version = "1.0" }
serde_yaml = "0.9"

[dev-dependencies]
csv = "1.3"
# criterion = { version = "0.4", features = ["html_reports"] }
rand = { version = "0.8", features = [
  "small_rng",
  "alloc",
], default-features = false }
serde_yaml = "0.9"

[[bench]]
name = "perft_bench"
harness = false

[lints.clippy]
semicolon_if_nothing_returned = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
items_after_statements = "warn"
match_same_arms = "warn"
uninlined_format_args = "warn"
match_wildcard_for_single_variants = "warn"
manual_let_else = "warn"
trivially_copy_pass_by_ref = "warn"
redundant_closure_for_method_calls = "warn"
return_self_not_must_use = "warn"
